简化/rg消息回复构建